# hacs-kakao-map

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  hacs.json  pyproject.toml  zensical.en.toml  zensical.ko.toml
.devcontainer/: devcontainer.json
.github/: release-drafter-prerelease.yml  release-drafter.yml  release-please-config.json
.github/workflows/: ci.yml  docs.yml  release-drafter.yml  release-zip.yml  release.yml  test.yml  validate.yml
custom_components/kakao_map/: __init__.py  api.py  config_flow.py  const.py  formatters.py  helpers.py  llm_registration.py  manifest.json  map_patch.py  services.py  services.yaml
custom_components/kakao_map/llm/: __init__.py  const.py  directions_tool.py  place_tools.py  render.py
custom_components/kakao_map/llm_api/: __init__.py  base_tool.py  const.py  geocode_tool.py  schema.py  tools.py
custom_components/kakao_map/translations/: en.json  ko.json
docs/: index.html
docs/en/: index.md
docs/ko/: index.md
scripts/: develop  setup  test  test-dev
tasks/: plan.md  todo.md
tests/: __init__.py  conftest.py  requirements_test.txt  test_api.py  test_config_flow.py  test_init.py  test_llm_api.py  test_llm_platform_hook.py  test_llm_registration_fallback.py  test_map_patch.py  test_repo_docs.py  test_services.py  test_translations.py
